Added Berksfile and test-kitchen

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 *swp
 *swo
 metadata.json
+
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+pkg/
+
+# Berkshelf
+.vagrant
+/cookbooks
+Berksfile.lock
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
+.kitchen/
+.kitchen.local.yml
