--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,11 +6,14 @@ provisioner:
   name: chef_solo
 
 platforms:
+  - name: debian-7.4
   - name: ubuntu-12.04
   - name: centos-6.4
 
 suites:
   - name: default
     run_list:
-      - recipe[redisio::default]
+    run_list:
+      - recipe[redisio::install]
+      - recipe[redisio::enable]
     attributes:
